force-app/main/default/objects/ExternalCase__x/ExternalCase__x.object-meta.xml
<CustomObject>
    <externalDataSource>Gptfy1_8Clone3</externalDataSource>
    <externalName>Case</externalName>
    <label>External Case</label>
    <pluralLabel>External Cases</pluralLabel>
</CustomObject>