force-app/main/default/objects/ExternalCase__x/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <externalDeveloperName>AccountId</externalDeveloperName>
    <label>Account ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>