force-app/main/default/objects/ExternalCase__x/fields/Case_URL_c__c.field-meta.xml
<CustomField>
    <fullName>Case_URL_c__c</fullName>
    <externalDeveloperName>Case_URL__c</externalDeveloperName>
    <inlineHelpText>URL text field for Security Layer</inlineHelpText>
    <label>Case URL</label>
    <type>Url</type>
</CustomField>