force-app/main/default/objects/ExternalCase__x/fields/ContactFax__c.field-meta.xml
<CustomField>
    <fullName>ContactFax__c</fullName>
    <externalDeveloperName>ContactFax</externalDeveloperName>
    <label>Contact Fax</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Phone</type>
</CustomField>