force-app/main/default/objects/ExternalCase__x/fields/ContactMobile__c.field-meta.xml
<CustomField>
    <fullName>ContactMobile__c</fullName>
    <externalDeveloperName>ContactMobile</externalDeveloperName>
    <label>Contact Mobile</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Phone</type>
</CustomField>