force-app/main/default/objects/ExternalCase__x/fields/Currency_c__c.field-meta.xml
<CustomField>
    <fullName>Currency_c__c</fullName>
    <externalDeveloperName>Currency__c</externalDeveloperName>
    <label>Currency</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>