force-app/main/default/objects/ExternalCase__x/fields/Email_c__c.field-meta.xml
<CustomField>
    <fullName>Email_c__c</fullName>
    <externalDeveloperName>Email__c</externalDeveloperName>
    <label>Email</label>
    <type>Email</type>
</CustomField>