force-app/main/default/objects/ExternalCase__x/fields/India_Aadhar_Card_c__c.field-meta.xml
<CustomField>
    <fullName>India_Aadhar_Card_c__c</fullName>
    <externalDeveloperName>India_Aadhar_Card__c</externalDeveloperName>
    <inlineHelpText>UID format including - between number</inlineHelpText>
    <label>India- Aadhar Card</label>
    <length>255</length>
    <type>Text</type>
</CustomField>