force-app/main/default/objects/ExternalCase__x/fields/Long_Text_Area_c__c.field-meta.xml
<CustomField>
    <fullName>Long_Text_Area_c__c</fullName>
    <externalDeveloperName>Long_Text_Area__c</externalDeveloperName>
    <label>Long Text Area</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>