force-app/main/default/objects/ExternalCase__x/fields/MasterRecordId__c.field-meta.xml
<CustomField>
    <fullName>MasterRecordId__c</fullName>
    <externalDeveloperName>MasterRecordId</externalDeveloperName>
    <label>Master Record ID</label>
    <length>18</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Text</type>
</CustomField>