force-app/main/default/objects/ExternalCase__x/fields/Number_c__c.field-meta.xml
<CustomField>
    <fullName>Number_c__c</fullName>
    <externalDeveloperName>Number__c</externalDeveloperName>
    <label>Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>