force-app/main/default/objects/ExternalCase__x/fields/ParentId__c.field-meta.xml
<CustomField>
    <fullName>ParentId__c</fullName>
    <externalDeveloperName>ParentId</externalDeveloperName>
    <label>Parent Case ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>