force-app/main/default/objects/ExternalCase__x/fields/Percent_c__c.field-meta.xml
<CustomField>
    <fullName>Percent_c__c</fullName>
    <externalDeveloperName>Percent__c</externalDeveloperName>
    <label>Percent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>