force-app/main/default/objects/ExternalCase__x/fields/Percent_Resolve_c__c.field-meta.xml
<CustomField>
    <fullName>Percent_Resolve_c__c</fullName>
    <externalDeveloperName>Percent_Resolve__c</externalDeveloperName>
    <label>Percent Resolve</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>