force-app/main/default/objects/ExternalCase__x/fields/Phone_c__c.field-meta.xml
<CustomField>
    <fullName>Phone_c__c</fullName>
    <externalDeveloperName>Phone__c</externalDeveloperName>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>