force-app/main/default/objects/ExternalCase__x/fields/Ready_For_Mass_Processing_c__c.field-meta.xml
<CustomField>
    <fullName>Ready_For_Mass_Processing_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Ready_For_Mass_Processing__c</externalDeveloperName>
    <label>Ready For Mass Processing</label>
    <type>Checkbox</type>
</CustomField>