force-app/main/default/objects/ExternalCase__x/fields/SSN_USA_c__c.field-meta.xml
<CustomField>
    <fullName>SSN_USA_c__c</fullName>
    <externalDeveloperName>SSN_USA__c</externalDeveloperName>
    <inlineHelpText>USA SSN Number</inlineHelpText>
    <label>SSN USA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>