force-app/main/default/objects/ExternalCase__x/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <externalDeveloperName>Status</externalDeveloperName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Escalated</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>