force-app/main/default/objects/ExternalCase__x/fields/SuppliedPhone__c.field-meta.xml
<CustomField>
    <fullName>SuppliedPhone__c</fullName>
    <externalDeveloperName>SuppliedPhone</externalDeveloperName>
    <label>Phone</label>
    <length>40</length>
    <type>Text</type>
</CustomField>