force-app/main/default/objects/ExternalCase__x/fields/Target_Field_c__c.field-meta.xml
<CustomField>
    <fullName>Target_Field_c__c</fullName>
    <externalDeveloperName>Target_Field__c</externalDeveloperName>
    <label>Target Field</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>