force-app/main/default/objects/ExternalCase__x/fields/Text_Area_c__c.field-meta.xml
<CustomField>
    <fullName>Text_Area_c__c</fullName>
    <externalDeveloperName>Text_Area__c</externalDeveloperName>
    <label>Text Area</label>
    <type>TextArea</type>
</CustomField>