force-app/main/default/objects/ExternalCase__x/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <externalDeveloperName>Type</externalDeveloperName>
    <label>Case Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Problem</fullName>
            </value>
            <value>
                <fullName>Feature Request</fullName>
            </value>
            <value>
                <fullName>Question</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>